gofastpay.css
/* ... */
.home #press-logos img {
    margin: auto;
    text-align: center;
    list-style: none;
    height: 65px;
}

.whitepaper-intro {
    font-family: Helvetica, sans-serif;
    text-align: left;
    color: rgb(77,77,77);
    font-size: 14px;
    line-height: 26px;
}

.news.about #news-stories .news-logo {
    margin-top: 1em;
}

.whitepaper #explanation {
    background-image: url("images/Landing_Page.jpg");
    background-repeat: no-repeat;
    height: 330px;
}

.whitepaper #contact-form {
    background-color: #e7e5e5;
}

